Entrada do 3 codigo bubblesort

--- a/DSA-Python.ipynb
+++ b/DSA-Python.ipynb
@@ -105,21 +105,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "0e6c59c4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lista = [12, 7, 3, 5, 9]"
+    "# lista para ordenar\n",
+    "lista = [12, 7, 5, 9]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6b2db2ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# primeira passada da lista\n",
+    "lista = [7, 12, 5, 9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "41d0433f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# segunda passada da lista\n",
+    "lista = [7, 5, 12, 9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "040a0b54",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# terceira passada\n",
+    "lista = [5, 7, 12, 9]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b2db2ec",
+   "id": "bcb6c7be",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#quarta passada\n",
+    "lista = [5, 7, 9, 12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1fc9ba15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista = [3,9,11,65,4,3,12,62,79,12,17,21,5,1,9,123]\n",
+    "\n",
+    "\"\"\"Explicação breve do que esse codigo faz, e como faz:\n",
+    "a lista deve ser ordenada sempre do menor ao maior, o codigo faz o seguinte\n",
+    "usamos o n = para tamanho da lista, retornando sempre quantos elementos tem em toda a lista\n",
+    "fazemos um For para que consigamos passar de parte em parte dentro da lista, do 0 ... n\n",
+    "o j fará 0, tamanho - 1 - elemento atual ex: 0, 4 - 1 - 1:\n",
+    "Faremos o comparativo se o que há dentro da lista[j] é maior que  lista[j + 1] \n",
+    "se for, falamos que lista[j] e lista[j + 1] vai se tornar lista [j+1] e lista[j]\n",
+    "caso tenha trocado = continua como True\n",
+    "Se nenhuma troca mais ocorreu, iremos parar o for para que retorne a lista na formatação correta\n",
+    "print bubble_sort - printamos a lista em forma ordenada crescente, se quisermos de forma decrescente, apenas usamos sinal de <\n",
+    "\n",
+    "\"\"\" \n",
+    "\n",
+    "def bubble_sort(lista):\n",
+    "    n = len(lista)          # quantidade de elementos que contem dentro da lista\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        change = False\n",
+    "\n",
+    "        for j in range(0, n - 1 - i):\n",
+    "            if lista[j] > lista[j+1]:\n",
+    "                lista[j], lista[j+1] = lista[j+ 1], lista[j]\n",
+    "                change = True\n",
+    "\n",
+    "        if not change:\n",
+    "            break\n",
+    "\n",
+    "    return lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6aab6fb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 3, 4, 5, 9, 9, 11, 12, 12, 17, 21, 62, 65, 79, 123]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bubble_sort(lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "50c53e91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4, 11, 12, 12, 17, 17, 21, 29, 35, 43, 62, 65, 79, 91, 123]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista2 = [43,29,11,65,4,3,12,62,79,12,17,21,35,17,91,123]\n",
+    "\n",
+    "bubble_sort(lista2)"
+   ]
   }
  ],
  "metadata": {
