--- a/DSA-Python1.ipynb
+++ b/DSA-Python1.ipynb
@@ -161,6 +161,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "99db8200",
+   "metadata": {},
+   "source": [
+    "PseudoCodigo\n",
+    "**Definir uma lista de elementos desordenados.\n",
+    "\n",
+    "Repetir o processo até que a lista esteja ordenada:\n",
+    "\n",
+    "Percorrer a lista do início até o penúltimo elemento.\n",
+    "\n",
+    "Comparar o elemento atual com o próximo elemento.\n",
+    "\n",
+    "Se o elemento atual for maior que o próximo:\n",
+    "\n",
+    "Trocar as posições dos dois elementos.\n",
+    "\n",
+    "Continuar até o final da lista.\n",
+    "\n",
+    "Após cada passagem completa, o maior elemento \"borbulha\" para o final da lista.\n",
+    "\n",
+    "Reduzir o limite de comparação (porque o último elemento já está no lugar correto).\n",
+    "\n",
+    "Quando não houver trocas em uma passagem, significa que a lista está ordenada → encerrar.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "1fc9ba15",
@@ -242,6 +269,12 @@
     "\n",
     "bubble_sort(lista2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84c67dd4",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
