--- a/DSA-Python2.6.ipynb
+++ b/DSA-Python2.6.ipynb
@@ -219,6 +219,164 @@
    "source": [
     "tupla1.index(\"Elefantes\")  # Encontrando o índice do elemento \"Elefantes\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "41f05df6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tupla1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mtupla1\u001b[49m[\u001b[32m1\u001b[39m] = \u001b[32m21\u001b[39m \u001b[38;5;66;03m# vai dar erro\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'tupla1' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "tupla1[1] = 21 # vai dar erro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d267cfc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t2 = (\"A\", \"B\", \"C\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "18b91674",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('A', 'B', 'C')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fc4608cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mt2\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m = \u001b[33m\"\u001b[39m\u001b[33mD\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;66;03m# vai dar erro\u001b[39;00m\n",
+      "\u001b[31mTypeError\u001b[39m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "t2[0] = \"D\" # vai dar erro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76466b2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# usando a função list(), para converter uma tupla para lista\n",
+    "lista_t2 = list(t2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "20f3963a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'B', 'C']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista_t2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "14a3ac26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista_t2.append(\"D\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0f569577",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t2 = tuple(lista_t2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4712b5d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('A', 'B', 'C', 'D')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t2\n",
+    "\n",
+    "# Ao fizermos a transformação da tupla para lista, podemos adicionar novos valores, mas ao voltar em tupla, não conseguimos mais modificar seus elementos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea4eaa0f",
+   "metadata": {},
+   "source": [
+    "**Fim**"
+   ]
   }
  ],
  "metadata": {
