--- a/Cap5/DSA-Python5.3.ipynb
+++ b/Cap5/DSA-Python5.3.ipynb
@@ -2,6 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "b4794a1f",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "f976d817",
    "metadata": {},
    "source": [
@@ -144,16 +150,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "80c420c6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "o\n",
+      "n\n",
+      " \n",
+      "é\n",
+      " \n",
+      " \n",
+      "i\n",
+      "n\n",
+      "c\n",
+      "r\n",
+      "i\n",
+      "v\n",
+      "e\n",
+      "l\n",
+      "!\n"
+     ]
+    }
+   ],
    "source": [
     "# Desconsideramos a letra z ao imprimir os caracteres da frase\n",
     "for letra in 'Python é zzz incrivel!':\n",
     "    if letra == 'z':\n",
     "        continue\n",
     "    print(letra)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9add6d51",
+   "metadata": {},
+   "source": [
+    "**While e For juntos**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5e791c00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97, 101, 103, 107, 109, 113, 127, 131, 137, 139, 149, 151, 157, 163, 167, 173, 179, 181, 191, 193, 197, 199, 211, 223, 227, 229, 233, 239, 241, 251, 257, 263, 269, 271, 277, 281, 283, 293, 307, 311, 313, 317, 331, 337, 347, 349]\n"
+     ]
+    }
+   ],
+   "source": [
+    "primos = []\n",
+    "\n",
+    "for num in range (2, 350):\n",
+    "\n",
+    "    eh_primo = True\n",
+    "    i = 2\n",
+    "    while i <= num / 2:\n",
+    "        if num % i == 0:\n",
+    "            eh_primo = False\n",
+    "            break\n",
+    "        i += 1\n",
+    "\n",
+    "    if eh_primo:\n",
+    "        primos.append(num)\n",
+    "\n",
+    "print(primos)\n"
    ]
   }
  ],
