--- a/Cap5/DSA-Python5.3.ipynb
+++ b/Cap5/DSA-Python5.3.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "734a5314",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "4dd05817",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "5e791c00",
    "metadata": {},
    "outputs": [
@@ -206,14 +206,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97, 101, 103, 107, 109, 113, 127, 131, 137, 139, 149, 151, 157, 163, 167, 173, 179, 181, 191, 193, 197, 199, 211, 223, 227, 229, 233, 239, 241, 251, 257, 263, 269, 271, 277, 281, 283, 293, 307, 311, 313, 317, 331, 337, 347, 349]\n"
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29]\n",
+      "CPU times: total: 0 ns\n",
+      "Wall time: 102 μs\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
+    "\n",
     "primos = []\n",
     "\n",
-    "for num in range (2, 350):\n",
+    "for num in range (2, 31):\n",
     "\n",
     "    eh_primo = True\n",
     "    i = 2\n",
@@ -228,6 +232,82 @@
     "\n",
     "print(primos)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2224a9c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 é primo\n",
+      "3 é primo\n",
+      "5 é primo\n",
+      "7 é primo\n",
+      "11 é primo\n",
+      "13 é primo\n",
+      "17 é primo\n",
+      "19 é primo\n",
+      "23 é primo\n",
+      "29 é primo\n",
+      "CPU times: total: 0 ns\n",
+      "Wall time: 139 μs\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "\n",
+    "# Entramos no loop para cada numero de 2 a 30\n",
+    "for i in range(2, 31):\n",
+    "\n",
+    "    # Variavel de Controle\n",
+    "    j = 2\n",
+    "\n",
+    "    #Contador\n",
+    "    valor = 0\n",
+    "\n",
+    "\n",
+    "    # Entramos no loop enquanto j for menor que i\n",
+    "    # exemplo: se i for 5, j vai de 2 a 4\n",
+    "    while j < i:\n",
+    "\n",
+    "        # Se i for divisivel por j, atribui 1 a valor e soma 1 a j\n",
+    "        # Exemplo: 5 % 2 != 0, então soma 1 a j\n",
+    "        # Exemplo: 6 % 2 == 0, então atribui 1 a valor e soma 1 a j\n",
+    "        if i % j == 0:\n",
+    "            valor = 1\n",
+    "            j = j + 1\n",
+    "        else:\n",
+    "            j = j + 1\n",
+    "\n",
+    "\n",
+    "        # Se valor for 0, imprime que i é primo\n",
+    "        # Se valor for 1, atribui 0 a valor e sai do loop\n",
+    "    if valor == 0:\n",
+    "        print(str(i) + \" é primo\")\n",
+    "        valor = 0\n",
+    "    else:\n",
+    "        valor = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52eda83e",
+   "metadata": {},
+   "source": [
+    "**Fim**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ae0af49",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
