--- a/Cap5/DSA-Python5.6.ipynb
+++ b/Cap5/DSA-Python5.6.ipynb
@@ -687,6 +687,254 @@
    "source": [
     "**Criando Funções usando outras funções**"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "07cebcd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "# Verificando se im numero é primo\n",
+    "\n",
+    "def numPrimo(num):\n",
+    "    if (num % 2) == 0 and num > 2:\n",
+    "        return \"Este numero não é primo\"\n",
+    "    for i in range(3, int(math.sqrt(num)) + 1, 2):\n",
+    "        if (num % i) == 0:\n",
+    "            return 'Este numero não é primo!'\n",
+    "    return \"Este numero é primo\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b35ed56a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Este numero é primo'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numPrimo(541)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ce31bd7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "caixa_baixa = \"Este texto deveria estar todo em lowercase\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4da7c11e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lowerCase(text):\n",
+    "    return text.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4bee983a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'este texto deveria estar todo em lowercase'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lowerCase(caixa_baixa)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1faf4830",
+   "metadata": {},
+   "source": [
+    "**Fazendo split dos dados**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7007a676",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_string_palavras(text):\n",
+    "    return text.split(\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0eb71354",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "texto = \"Está função será bastante util para separar grandes volumes de dados\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "995dc4e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Está',\n",
+       " 'função',\n",
+       " 'será',\n",
+       " 'bastante',\n",
+       " 'util',\n",
+       " 'para',\n",
+       " 'separar',\n",
+       " 'grandes',\n",
+       " 'volumes',\n",
+       " 'de',\n",
+       " 'dados']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "split_string_palavras(texto)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0d58a373",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_string_letras(text):\n",
+    "    texto = text.upper()\n",
+    "    for letra in texto:\n",
+    "        print(letra)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "23da0020",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E\n",
+      "S\n",
+      "T\n",
+      "Á\n",
+      " \n",
+      "F\n",
+      "U\n",
+      "N\n",
+      "Ç\n",
+      "Ã\n",
+      "O\n",
+      " \n",
+      "S\n",
+      "E\n",
+      "R\n",
+      "Á\n",
+      " \n",
+      "B\n",
+      "A\n",
+      "S\n",
+      "T\n",
+      "A\n",
+      "N\n",
+      "T\n",
+      "E\n",
+      " \n",
+      "U\n",
+      "T\n",
+      "I\n",
+      "L\n",
+      " \n",
+      "P\n",
+      "A\n",
+      "R\n",
+      "A\n",
+      " \n",
+      "S\n",
+      "E\n",
+      "P\n",
+      "A\n",
+      "R\n",
+      "A\n",
+      "R\n",
+      " \n",
+      "G\n",
+      "R\n",
+      "A\n",
+      "N\n",
+      "D\n",
+      "E\n",
+      "S\n",
+      " \n",
+      "V\n",
+      "O\n",
+      "L\n",
+      "U\n",
+      "M\n",
+      "E\n",
+      "S\n",
+      " \n",
+      "D\n",
+      "E\n",
+      " \n",
+      "D\n",
+      "A\n",
+      "D\n",
+      "O\n",
+      "S\n"
+     ]
+    }
+   ],
+   "source": [
+    "split_string_letras(texto)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f49964e",
+   "metadata": {},
+   "source": [
+    "**Fim**"
+   ]
   }
  ],
  "metadata": {
