--- a/Exercicios-CAP5/DSA-Python-Cap05-Exercicios-Funcoes.ipynb
+++ b/Exercicios-CAP5/DSA-Python-Cap05-Exercicios-Funcoes.ipynb
@@ -298,16 +298,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 4]"
+       "[0, 1, 2, 3, 4]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
    "source": [
     "# Exercício 10 - Crie uma list comprehension que imprima os números menores que 5 em um intervalo de 1 a 10\n",
     "\n",
-    "[x for x in range(1, 11) if x < 5]"
+    "[x for x in range(11) if x < 5]"
    ]
   },
   {
